# hftbacktest

./: .gitignore  Cargo.toml  Data
collector/data/: test.ipynb
collector/src/bybit/: http.rs
config/: iceoryx2.toml
connector/: Cargo.toml  bybit.toml  temp.txt
connector/src/: connector.rs  main.rs
connector/src/binancefutures/: market_data_stream.rs
connector/src/bybit/: mod.rs  public_stream.rs
examples/: Data Preparation.ipynb  GLFT Market Making Model and Grid Trading.ipynb  Getting Started.ipynb  Market Making with Alpha - Order Book Imbalance.ipynb  Order Latency Data.ipynb
hftbacktest/: gridtrading0.csv
hftbacktest/examples/: gridtrading_256assets.ipynb  gridtrading_backtest.rs  gridtrading_live_bybit.rs
hftbacktest/src/: algo.rs  lib.rs
test/: Cargo.toml  commands_txt.txt  glf.rs  restart_iceoryx.sh
test/src/: main.rs
